--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "init-db": "tsx scripts/init-db.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -57,14 +58,17 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "better-sqlite3": "^11.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^22",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "@types/better-sqlite3": "^7.6.12",
     "postcss": "^8.5",
+    "tsx": "^4.19.2",
     "tailwindcss": "^3.4.17",
     "typescript": "5.7.3"
   },
